# tap-rickandmorty

./: README.md  pyproject.toml
tap_rickandmorty/: client.py  streams.py  tap.py
tap_rickandmorty/schemas/: characters.json  episodes.json  locations.json
