[tool.poetry]
name = "tap-rickandmorty"
version = "0.0.1"
description = "`tap-rickandmorty` is Singer tap for RickAndMorty, built with the Singer SDK."
authors = ["Claire Carroll"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
ipdb = "^0.13.8"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-rickandmorty = 'tap_rickandmorty.tap:TapRickAndMorty.cli'
